# systemd_traefik_configuration_provider

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  cross-build.nix  flake.nix  run.sh
.forgejo/workflows/: build.yaml
.githooks/pre-commit/: 01-clippy.sh  11-fmt.sh
src/: args.rs  dbus.rs  generation_engine.rs  helpers.rs  infra.rs  logger.rs  main.rs  manager.rs  service.rs  unit.rs  yaml.rs
test/: sleep.service
